# modelsentry

./: .clippy.toml  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.daemon  LICENSE  Makefile  PITCH.md  README.md  SECURITY.md  TODO.md  docker-compose.yml  start-all.ps1  test_out.txt
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml
config/: default.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: alert.rs  baseline.rs  mod.rs  probe.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  constants.rs  error.rs  lib.rs  models.rs  types.rs
crates/core/: Cargo.toml
crates/core/benches/: drift_bench.rs
crates/core/src/: alert.rs  email.rs  lib.rs  probe_runner.rs
crates/core/src/drift/: assessment.rs  calculator.rs  cosine.rs  entropy.rs  interpret.rs  kl.rs  mod.rs  twosample.rs
crates/core/src/provider/: anthropic.rs  azure.rs  mod.rs  ollama.rs  openai.rs
crates/core/tests/: integration.rs
crates/core/tests/integration/: alert_fire.rs  drift_detection.rs  probe_lifecycle.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: constants.rs  lib.rs  main.rs  provider_factory.rs  scheduler.rs  server.rs  vault.rs
crates/daemon/src/routes/: alerts.rs  baselines.rs  mod.rs  probes.rs  runs.rs  vault.rs
crates/store/: Cargo.toml
crates/store/src/: alert_store.rs  baseline_store.rs  lib.rs  probe_store.rs  run_store.rs  schedule_store.rs  spend_store.rs
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  DRIFT_DETECTION_METHODOLOGY.md  LOCAL_CI_GUIDE.md  PROJECT_PLAN.md  RELEASE_READINESS_CHECKLIST.md  THRESHOLD_TUNING.md  TODO.md
web/: Dockerfile  README.md  package-lock.json  package.json
web/src/: app.css
web/src/lib/: api.ts  auth.svelte.ts  constants.ts  types.ts
web/src/lib/components/: AddProbeForm.svelte  ApiKeyDialog.svelte  DriftChart.svelte  DriftMetrics.svelte  ErrorState.svelte  LoadingState.svelte  ProbeTable.svelte  SummaryCard.svelte
web/src/routes/: +error.svelte  +layout.svelte  +page.svelte
web/src/routes/probes/: +page.svelte
web/src/routes/probes/[id]/: +page.svelte
