[workspace]
resolver = "2"
members = [
  "crates/common",
  "crates/core",
  "crates/store",
  "crates/daemon",
  "crates/cli",
]

[workspace.package]
edition = "2024"
license-file = "LICENSE"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
redb = "4"
secrecy = "0.10"
toml = "1"
proptest = "1"
async-trait = "0.1"
futures = "0.3"
age = { version = "0.11", features = ["armor"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }
wiremock = "0.6"
mockall = "0.14"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive", "env"] }
cron = "0.16"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
# Library/runtime code must not panic via `unwrap()` or `panic!` — return typed
# errors instead. `expect("reason")` stays allowed for documented invariants
# (e.g. lock poisoning). Tests are exempted via `.clippy.toml`.
unwrap_used = "warn"
panic = "warn"
