[package]
name = "modelsentry-core"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
modelsentry-common = { path = "../common" }
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
mockall.workspace = true
proptest.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
wiremock.workspace = true

[lints]
workspace = true
