[package]
name = "modelsentry-daemon"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
modelsentry-common = { path = "../common" }
modelsentry-core = { path = "../core" }
modelsentry-store = { path = "../store" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
