[package]
name = "modelsentry-daemon"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
modelsentry-common = { path = "../common" }
modelsentry-core = { path = "../core" }
modelsentry-store = { path = "../store" }
age.workspace = true
anyhow.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
chrono.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
uuid.workspace = true

[lints]
workspace = true
