[package]
name = "modelsentry-store"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
modelsentry-common = { path = "../common" }
chrono.workspace = true
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
